# metaroles

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml  qodana.sarif.json  requirements.txt
.github/workflows/: docker-publish.yml  qodana_code_quality.yml
core/: base.py  extensions_loader.py  init_logging.py  init_tortoise.py
extensions/: member_update_event.py  metarole_command.py  my_command.py  my_context_menu.py  my_event.py
migrations/models/: 0_20230425213457_init.py  1_20230425224648_update.py
model/: __init__.py  condition.py  metarole.py
models/: __init__.py  condition.py  metarole.py  moderation.py
models/enums/: condition_type.py  moderation_type.py
