[tool.isort]
profile = "black"

[tool.poetry]
name = "Meta-Roles"
version = "0.1.5"
description = "A bot for automatic role management based on meta-conditions"
authors = ["Maxence Lagalle <contact@maxence-lagalle.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
orjson = "^3.9.0"
interactions.py = "^5.8.0"
tortoise-orm = "^0.19.3"
aerich = "^0.7.1"
sentry-sdk = "^1.25.0"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "core.init_tortoise.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
